[package]
name = "vmefsd"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
fortanix-vme-abi = { path = "/home/sinan/dev/rust-sgx/fortanix-vme/fortanix-vme-abi" }
vsock = "0.5"
