[package]
name = "vmefsd"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22.1"
env_logger = "0.11"
fortanix-vme-abi = { path = "../rust-sgx/fortanix-vme/fortanix-vme-abi" }
fuser = "0.14"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "2.0"
vsock = "0.5"
